[gd_scene load_steps=11 format=2]

[ext_resource path="res://NPC's/Mama/mama.gd" type="Script" id=1]
[ext_resource path="res://art/Sprites_NPC/mamaeye.png" type="Texture" id=2]
[ext_resource path="res://art/Sprites_NPC/mama.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 424.936

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
} ]

[sub_resource type="Animation" id=7]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}

[node name="Node2D" type="StaticBody2D"]
modulate = Color( 1, 1, 1, 0.701961 )
position = Vector2( 0, -2.95845 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.790518, 0.916003 )
polygon = PoolVector2Array( -55.0272, 89.5194, -71.4722, 113.537, -55.6597, 116.812, -16.4449, 118.995, 32.2573, 120.633, 68.3097, 118.449, 78.4296, 107.532, 60.0872, 95.5237, 27.8299, 82.9692, -8.85496, 82.4233 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "idle"
frame = 3
playing = true

[node name="Sprite" type="Sprite" parent="AnimatedSprite"]
z_index = 1
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fly = SubResource( 7 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D2"]
polygon = PoolVector2Array( 61.4904, 94.6377, 21.3999, 105.031, -40.963, 102.062, -52.8416, 102.062, -48.3871, 78.3045, -32.054, 56.032, -43.9326, 7.0326, -60.2658, -24.1488, -45.4175, -76.1179, -40.963, -96.9056, -11.2664, -104.33, 37.7331, -93.9359, 48.1269, -62.7544, 52.5814, -38.9971, 55.551, -3.36118, 54.0662, 11.4871, 33.2786, 10.0023, 33.2786, 26.3354, 30.3089, 53.0624, 36.2482, 76.8197 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="input_event" from="Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="mouse_entered" from="Area2D2" to="." method="_on_Area2D2_mouse_entered"]
[connection signal="mouse_exited" from="Area2D2" to="." method="_on_Area2D2_mouse_exited"]
